dashboard: fix: improve card spacing
Add some spacing at the bottom of card section so that the page boundary
is slightly separated from the last card.

--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -221,6 +221,7 @@ header .search {
     min-height: 100%;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: var(--card-gap);
+    margin-bottom: var(--card-gap);
 }
 
 .projects .projects-cards .project-card {
